# GoodFriend

./: .gitignore  .gitmodules  GoodFriend.sln  README.md  crowdin.yml  repo.json
.assets/Source/: github-meta-banner.psd
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: api_changes.yml  (+19 more)
GoodFriend.Api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  Dockerfile  motd-example.json
GoodFriend.Client/: EventStreamConnectionState.cs  GoodFriend.Client.csproj  GoodFriendClient.cs  IGoodFriendClient.cs  packages.lock.json
GoodFriend.Plugin/: .editorconfig  .gitignore  GoodFriend.Plugin.csproj  GoodFriend.Plugin.json  GoodFriend.cs  GoodFriend.csproj  GoodFriend.json  GoodFriendPlugin.cs
GoodFriend.Server/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  index.ts  package.json  tsconfig.json
src/: .editorconfig  GoodFriend.sln
src/Api/: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/Api/data/: config.example.toml  config.toml.example
src/Api/src/: config.rs  main.rs
src/Api/src/api/: core.rs  events.rs  index.rs  mod.rs  static_content.rs  update.rs
src/Api/src/api/guards/: authenticated_user.rs  cid_hash_duplicate_guard.rs  client_key.rs  content_id.rs  minimum_game_version.rs  mod.rs  user_agent.rs
src/Api/src/api/responses/: metadata.rs  minimum_game_version.rs  mod.rs
src/Api/src/api/routes/: mod.rs
src/Api/src/api/routes/announcements/: mod.rs  send.rs  stream.rs
src/Api/src/api/routes/auth/: mod.rs  validate.rs
src/Api/src/api/routes/core/: auth.rs  connections.rs  features.rs  health.rs  metadata.rs  mod.rs
src/Api/src/api/routes/player_events/: mod.rs  stream.rs  update_loginstate.rs  update_world.rs
src/Api/src/api/routes/static_files/: favicon.rs  files.rs  index.rs  mod.rs
src/Api/src/api/types/: config.rs  mod.rs
src/Api/src/config/: about.rs  base.rs  mod.rs  security.rs
src/Api/src/extractors/: authenticated_user.rs  client_key.rs  content_id.rs  mod.rs
src/Api/src/routes/: mod.rs
src/Api/src/routes/announcements/: mod.rs  send.rs  stream.rs
src/Api/src/routes/auth/: mod.rs  validate.rs
src/Api/src/routes/core/: connections.rs  health.rs  mod.rs
src/Api/src/routes/events/: mod.rs  stream.rs  update_loginstate.rs
src/Api/src/types/: game_version.rs  mod.rs
src/Api/static/: index.html
thunder-tests/: thunderCollection.json  thunderclient.json
(+405 files in other folders)
